# pyfhd

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CITATION.cff  Dockerfile  LICENSE  README.md  codemeta.json  environment.yml  pyfhd_report.html  pyproject.toml  setup.py
.github/: pull_request_template.md
.github/workflows/: black.yml  dockerhub.yaml  publish.yml  test.yml
PyFHD/: pyfhd.py
PyFHD/beam_setup/: antenna.py  beam.py  beam_utils.py  mwa.py
PyFHD/calibration/: calibration_utils.py  vis_calibrate_subroutine.py
PyFHD/data_setup/: obs.py  uvfits.py
PyFHD/gridding/: gridding_utils.py
PyFHD/healpix/: export.py  healpix_utils.py
PyFHD/io/: pyfhd_io.py  pyfhd_quickview.py
PyFHD/plotting/: fits_image.py  gridding.py  image.py
PyFHD/pyfhd_tools/: pyfhd_setup.py
PyFHD/source_modeling/: vis_model_transfer.py
coverage_html_report/: class_index.html  function_index.html  index.html  status.json  z_2350038746b4c853___init___py.html  z_2350038746b4c853_antenna_py.html  z_2350038746b4c853_beam_py.html  z_2350038746b4c853_beam_utils_py.html  z_2f5d8eaf593f2b51___init___py.html  z_2f5d8eaf593f2b51_vis_model_transfer_py.html  z_34c4b9d3d7f0e3cf___init___py.html  z_34c4b9d3d7f0e3cf_datasets_py.html  z_3ff5bfad80aa4e23___git___py.html  z_3ff5bfad80aa4e23___init___py.html  z_3ff5bfad80aa4e23_pyfhd_py.html  z_41098e5bea5b68aa___init___py.html  z_41098e5bea5b68aa_flagging_py.html  z_449038fa3ad179d9___init___py.html  z_449038fa3ad179d9_calibration_py.html  z_449038fa3ad179d9_gridding_py.html  z_449038fa3ad179d9_image_py.html  z_47dcd11ecdd8e2d6___init___py.html  z_4deee1440f28ae37___init___py.html  z_4deee1440f28ae37_flagging_py.html  z_694c6539f1290e86___init___py.html  z_694c6539f1290e86_pyfhd_io_py.html  z_694c6539f1290e86_pyfhd_quickview_py.html  z_6ff2d86a359326c4___init___py.html  z_828fdda5354789e6___init___py.html  z_828fdda5354789e6_calibrate_py.html  z_828fdda5354789e6_calibration_utils_py.html  z_828fdda5354789e6_vis_calibrate_subroutine_py.html  z_8736c67581728844___init___py.html  z_8736c67581728844_pyfhd_setup_py.html  z_8736c67581728844_pyfhd_utils_py.html  z_8736c67581728844_test_utils_py.html  z_8736c67581728844_unit_conv_py.html  z_880267fb36989467___init___py.html  z_880267fb36989467_pyfhd_setup_py.html  z_880267fb36989467_pyfhd_utils_py.html  (+45 more)
docs/: requirements.txt
docs/source/: conf.py  index.rst
paper/: paper.md
src/pyfhd/: __init__.py  pyfhd.py
tests/test_beam/: test_beam_image.py  test_beam_power.py  test_gaussian_decomp.py
(+99 files in other folders)
