[project]
name = "pyfhd"
dynamic = ["version"]
readme = "README.md"
license = { file = "LICENSE" }
description = "Python Fast Holograhic Deconvolution: A Python package that does fast-mode Epoch of Reionization analysis."
authors = [
    { name = "Joel Dunstan (SkyWa7ch3r)", email = "joel.g.w.dunstan@gmail.com"},
    { name = "Jack Line (JLBLine)", email = "jack.line@curtin.edu.au"},
    { name = "Nichole Barry (nicholebarry)", email = "nichole.barry@unsw.edu.au"},
    { name = "Bryna Hazelton (bhazelton)", email = "brynah@uw.edu"}
]
maintainers = [
    { name = "Nichole Barry (nicholebarry)", email = "nichole.barry@unsw.edu.au"},
    { name = "Bryna Hazelton (bhazelton)", email = "brynah@uw.edu"}
]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "astropy>=6.1.7",
    "colorama>=0.4.6",
    "configargparse>=1.7",
    "h5py>=3.13.0",
    "healpy>=1.18.1",
    "importlib-resources>=6.5.2",
    "matplotlib>=3.10.3",
    "numba>=0.61.2",
    "numpy>=2.2.5",
    "pyuvdata>=3.2.1",
    "setuptools_scm>=8.1",
    "scipy>=1.15.3",
]

[project.scripts]
pyfhd = "pyfhd.pyfhd:main"

[project.urls]
"Repository" = "https://github.com/EoRImaging/pyfhd"
"Documentation" = "https://pyfhd.readthedocs.io/en/latest/"
"Bug Tracker" = "https://github.com/EoRImaging/pyfhd/issues"
"Changelog" = "https://pyfhd.readthedocs.io/en/latest/changelog/changelog.html"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "ipykernel>=6.29.5",
    "myst-parser>=4.0.1",
    "pip>=25.1.1",
    "pre-commit>=4.2.0",
    "pyinstrument>=5.0.2",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pytest-html>=4.1.1",
    "pytest-html-merger>=0.1.0",
    "sphinx>=8.1.3",
    "sphinx-argparse>=0.5.2",
    "sphinx-reports>=0.7.5",
    "sphinx-rtd-theme>=3.0.2",
]

[build-system]
requires = ["setuptools>=65", "wheel", "setuptools_scm>=8.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.pytest.ini_options]
markers = [
    "github_actions",
]
